--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Reinforcement Learning-Based Motion Control and Multimodal Path
-    Planning of Jellyfish Millirobots</title>
+  <title>Multimodal Jellyfish Microrobot</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -53,15 +52,21 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+            <h1 class="title is-1 publication-title">Multimodal Jellyfish Microrobot</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
+              <!-- <span class="author-block">
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Yunlang Zhou</a><sup>*</sup>,</span> -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
+                <a>Yunlang Zhou</a><sup>*</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
+                  <a>Chenyang Yu</a><sup>*</sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
+                    <a>Ruokun He</a>
+                    <span class="author-block">
+                      <a>Yong-Lu Li</a>
+                      <span class="author-block">
+                        <a>Zhuo-Chen Ma</a>
                   </span>
                   </div>
 
@@ -149,7 +154,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper tellus sed ante aliquam tempus. Etiam porttitor urna feugiat nibh elementum, et tempor dolor mattis. Donec accumsan enim augue, a vulputate nisi sodales sit amet. Proin bibendum ex eget mauris cursus euismod nec et nibh. Maecenas ac gravida ante, nec cursus dui. Vivamus purus nibh, placerat ac purus eget, sagittis vestibulum metus. Sed vestibulum bibendum lectus gravida commodo. Pellentesque auctor leo vitae sagittis suscipit.
+            Microrobots hold great potential for cutting-edge applications in targeted drug delivery and non-invasive diagnostics. Among them, the magnetic soft flapping wing microrobots (e.g., jellyfish-inspired millirobots) demonstrate excellent flexibility, safety, and adaptability across a wide range of Reynolds number regimes. However, due to the highly nonlinear nature of its environmental interaction model, motion control of the jellyfish millirobots remains a significant challenge. In this work, we employ a learning-based control framework and achieve model-free motion control for a 3mm-long jellyfish millirobot through reinforcement learning and a Sim-to-Real approach. Additionally, we design a tri-modal input path planning pipeline supporting text, image, and point cloud inputs in this framework. The system achieves 98\% success rate in obstacle avoidance and a maximum positioning error of 0.26 body lengths during target hovering. The framework's model-free nature provides strong generalizability for controlling diverse magnetic microrobotic systems, overcoming traditional limitations imposed by complex physics-based modeling. Furthermore, the multimodal planning interface bridges natural communication modalities with microrobotic control, significantly enhancing operational accessibility for various applications.
           </p>
         </div>
       </div>
