--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
 
-                  <div class="column has-text-centered">
-                    <div class="publication-links">
+                  <!-- <div class="column has-text-centered">
+                    <div class="publication-links"> -->
                          <!-- Arxiv PDF link -->
-                      <span class="link-block">
+                      <!-- <span class="link-block">
                         <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
@@ -89,7 +89,7 @@
                         </span>
                         <span>Paper</span>
                       </a>
-                    </span>
+                    </span> -->
 
                     <!-- Supplementary PDF link -->
                     <!-- <span class="link-block">
@@ -120,7 +120,7 @@
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv</span>
+                  <span>arXiv (In Progress)</span>
                 </a>
               </span>
             </div>
@@ -157,7 +157,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Microrobots hold great potential for cutting-edge applications in targeted drug delivery and non-invasive diagnostics. Among them, the magnetic soft flapping wing microrobots (e.g., jellyfish-inspired millirobots) demonstrate excellent flexibility, safety, and adaptability across a wide range of Reynolds number regimes. However, due to the highly nonlinear nature of its environmental interaction model, motion control of the jellyfish millirobots remains a significant challenge. In this work, we employ a learning-based control framework and achieve model-free motion control for a 3mm-long jellyfish millirobot through reinforcement learning and a Sim-to-Real approach. Additionally, we design a tri-modal input path planning pipeline supporting text, image, and point cloud inputs in this framework. The system achieves 98\% success rate in obstacle avoidance and a maximum positioning error of 0.26 body lengths during target hovering. The framework's model-free nature provides strong generalizability for controlling diverse magnetic microrobotic systems, overcoming traditional limitations imposed by complex physics-based modeling. Furthermore, the multimodal planning interface bridges natural communication modalities with microrobotic control, significantly enhancing operational accessibility for various applications.
+            Microrobots hold great potential for cutting-edge applications in targeted drug delivery and non-invasive diagnostics. Among them, the magnetic soft flapping wing microrobots (e.g., jellyfish-inspired millirobots) demonstrate excellent flexibility, safety, and adaptability across a wide range of Reynolds number regimes. However, due to the highly nonlinear nature of its environmental interaction model, motion control of the jellyfish millirobots remains a significant challenge. In this work, we employ a learning-based control framework and achieve model-free motion control for a 3mm-long jellyfish millirobot through reinforcement learning and a Sim-to-Real approach. Additionally, we design a tri-modal input path planning pipeline supporting text, image, and point cloud inputs in this framework. The system achieves 98% success rate in obstacle avoidance and a maximum positioning error of 0.26 body lengths during target hovering. The framework's model-free nature provides strong generalizability for controlling diverse magnetic microrobotic systems, overcoming traditional limitations imposed by complex physics-based modeling. Furthermore, the multimodal planning interface bridges natural communication modalities with microrobotic control, significantly enhancing operational accessibility for various applications.
           </p>
         </div>
       </div>
