--- a/index.html
+++ b/index.html
@@ -232,36 +232,43 @@
 
 
 <!-- Video carousel -->
-<!-- <section class="hero is-small">
+<section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
+      <h2 class="title is-3">Supplementary Video</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%"> -->
+          <video poster="" id="video1" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
-            <!-- <source src="static/videos/carousel1.mp4"
+            <source src="static/videos/part1.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%"> -->
+          <video poster="" id="video2" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
-            <!-- <source src="static/videos/carousel2.mp4"
+            <source src="static/videos/part2.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\ -->
+          <video poster="" id="video3" autoplay controls muted loop height="100%">\
             <!-- Your video file here -->
-            <!-- <source src="static/videos/carousel3.mp4"
+            <source src="static/videos/part3.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video4">
+          <video poster="" id="video4" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/part4.mp4"
             type="video/mp4">
           </video>
         </div>
       </div>
     </div>
   </div>
-</section> -->
+</section>
 <!-- End video carousel -->
 
 
