--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Multimodal Jellyfish Microrobot</title>
+  <title>Jellyfish Millirobot</title>
   <link rel="icon" type="image/x-icon" href="static/images/jellyfish.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -52,12 +52,12 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Multimodal Jellyfish Microrobot</h1>
+            <h1 class="title is-1 publication-title">Jellyfish Millirobot</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <!-- <span class="author-block">
                 <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Yunlang Zhou</a><sup>*</sup>,</span> -->
-                Yunlang Zhou*, Chenyang Yu*, Ruokun He, Yong-Lu Li and Zhuo-Chen Ma
+                Yunlang Zhou, Ruokun He, Zhiang Zhang, Qiang Liu, Zhuo-Chen Ma<sup>*</sup> and Hesheng Wang
               <!-- <span class="author-block">
                 <a>Yunlang Zhou</a><sup>*</sup>,</span>
                 <span class="author-block">
@@ -72,10 +72,13 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup>Shanghai Jiao Tong University, <sup>2</sup>Shanghai Innovation Institute
+                    <span class="author-block"></span>
+                      <sup>1</sup>School of Automation and Intelligent Sensing, Shanghai Jiao Tong University, Shanghai 200240<br>
+                      <sup>2</sup>Key Laboratory of System Control and Information Processing, Ministry of Education of China, Shanghai 200240<br>
+                      <sup>3</sup>Shanghai Key Laboratory of Perception and Control in Industrial Network Systems, Shanghai, 200240<br>
+                      <sup>4</sup>School of Biomedical Engineering, Shanghai Jiao Tong University, Shanghai 200240
                       <!-- <br>Conferance name and year -->
                     </span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
 
                   <!-- <div class="column has-text-centered">
@@ -101,28 +104,6 @@
                       <span>Supplementary</span>
                     </a>
                   </span> -->
-
-                  <!-- Github link -->
-                  <span class="link-block">
-                    <a href="https://github.com/zyl-hub/multimodal-jellyfish-microrobot" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="fab fa-github"></i>
-                    </span>
-                    <span>Code (In Progress)</span>
-                  </a>
-                </span>
-
-                <!-- ArXiv abstract Link -->
-                <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
-                  class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                    <i class="ai ai-arxiv"></i>
-                  </span>
-                  <span>arXiv (In Progress)</span>
-                </a>
-              </span>
             </div>
           </div>
         </div>
@@ -158,7 +139,9 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Microrobots hold great potential for cutting-edge applications in targeted drug delivery and non-invasive diagnostics. Among them, the magnetic soft flapping wing microrobots (e.g., jellyfish-inspired millirobots) demonstrate excellent flexibility, safety, and adaptability across a wide range of Reynolds number regimes. However, due to the highly nonlinear nature of its environmental interaction model, motion control of the jellyfish millirobots remains a significant challenge. In this work, we employ a learning-based control framework and achieve model-free motion control for a 3mm-long jellyfish millirobot through reinforcement learning and a Sim-to-Real approach. Additionally, we design a tri-modal input path planning pipeline supporting text, image, and point cloud inputs in this framework. The system achieves 98% success rate in obstacle avoidance and a maximum positioning error of 0.26 body lengths during target hovering. The framework's model-free nature provides strong generalizability for controlling diverse magnetic microrobotic systems, overcoming traditional limitations imposed by complex physics-based modeling. Furthermore, the multimodal planning interface bridges natural communication modalities with microrobotic control, significantly enhancing operational accessibility for various applications.
+            Millirobots hold great potential for cutting-edge applications in targeted drug delivery and non-invasive diagnostics.
+            Among them, the magnetic soft flapping wing millirobots (e.g., jellyfish-inspired millirobots) demonstrate excellent flexibility, safety, and adaptability across a wide range of Reynolds number regimes. However, due to the highly nonlinear nature of its environmental interaction model, motion control of the jellyfish millirobots remains a significant challenge.
+            In this work, we employ a learning-based control framework and achieve model-free motion control for a 3mm-long jellyfish millirobot through reinforcement learning and a Sim-to-Real approach. Additionally, we implement a path planning pipeline within this framework. The system achieves a 98% success rate in obstacle avoidance and a maximum positioning error of 0.26 body lengths during target hovering. The framework's model-free nature provides strong generalizability for controlling diverse magnetic millirobotic systems, overcoming traditional limitations imposed by complex physics-based modeling and significantly enhancing operational accessibility for various applications.
           </p>
         </div>
       </div>
